@@ -27,6 +27,13 @@ $wgAutoloadLocalClasses = array(
 	'Categoryfinder' => 'includes/Categoryfinder.php',
 	'CategoryPage' => 'includes/CategoryPage.php',
 	'CategoryViewer' => 'includes/CategoryPage.php',
+	'CdbFunctions' => 'includes/Cdb_PHP.php',
+	'CdbReader' => 'includes/Cdb.php',
+	'CdbReader_DBA' => 'includes/Cdb.php',
+	'CdbReader_PHP' => 'includes/Cdb_PHP.php',
+	'CdbWriter' => 'includes/Cdb.php',
+	'CdbWriter_DBA' => 'includes/Cdb.php',
+	'CdbWriter_PHP' => 'includes/Cdb_PHP.php',
 	'ChangesList' => 'includes/ChangesList.php',
 	'ChangesFeed' => 'includes/ChangesFeed.php',
 	'ChangeTags' => 'includes/ChangeTags.php',
